; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Client.c_EncryptPassword2.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Client.c_EncryptPassword2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [17 x i8] c"EncryptPassword2\00", align 1
@.str.1 = private unnamed_addr constant [1 x i8] zeroinitializer, align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @EncryptPassword2(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  store i8* %0, i8** %2, align 8
  store i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i8** %5, align 8
  %8 = load i8*, i8** %2, align 8
  %9 = icmp eq i8* %8, null
  br i1 %9, label %10, label %11

10:                                               ; preds = %1
  store i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.1, i64 0, i64 0), i8** %2, align 8
  br label %11

11:                                               ; preds = %10, %1
  %12 = load i8*, i8** %2, align 8
  %13 = call i32 @StrLen(i8* %12)
  %14 = add nsw i32 %13, 1
  %15 = sext i32 %14 to i64
  store i64 %15, i64* %4, align 8
  %16 = load i64, i64* %4, align 8
  %17 = call i32* @ZeroMalloc(i64 %16)
  store i32* %17, i32** %3, align 8
  %18 = load i8*, i8** %5, align 8
  %19 = load i8*, i8** %5, align 8
  %20 = call i32 @StrLen(i8* %19)
  %21 = call i32* @NewCrypt(i8* %18, i32 %20)
  store i32* %21, i32** %6, align 8
  %22 = load i32*, i32** %6, align 8
  %23 = load i32*, i32** %3, align 8
  %24 = load i8*, i8** %2, align 8
  %25 = load i64, i64* %4, align 8
  %26 = sub nsw i64 %25, 1
  %27 = call i32 @Encrypt(i32* %22, i32* %23, i8* %24, i64 %26)
  %28 = load i32*, i32** %6, align 8
  %29 = call i32 @FreeCrypt(i32* %28)
  %30 = call i32* (...) @NewBuf()
  store i32* %30, i32** %7, align 8
  %31 = load i32*, i32** %7, align 8
  %32 = load i32*, i32** %3, align 8
  %33 = load i64, i64* %4, align 8
  %34 = sub nsw i64 %33, 1
  %35 = call i32 @WriteBuf(i32* %31, i32* %32, i64 %34)
  %36 = load i32*, i32** %7, align 8
  %37 = call i32 @SeekBuf(i32* %36, i32 0, i32 0)
  %38 = load i32*, i32** %3, align 8
  %39 = call i32 @Free(i32* %38)
  %40 = load i32*, i32** %7, align 8
  ret i32* %40
}

declare dso_local i32 @StrLen(i8*) #1

declare dso_local i32* @ZeroMalloc(i64) #1

declare dso_local i32* @NewCrypt(i8*, i32) #1

declare dso_local i32 @Encrypt(i32*, i32*, i8*, i64) #1

declare dso_local i32 @FreeCrypt(i32*) #1

declare dso_local i32* @NewBuf(...) #1

declare dso_local i32 @WriteBuf(i32*, i32*, i64) #1

declare dso_local i32 @SeekBuf(i32*, i32, i32) #1

declare dso_local i32 @Free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
